@@ -12,6 +12,7 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -48,7 +49,7 @@ public class QueryWorkStatusListService {
                             .recordSum(o.getRecordSum())
                             .build();
                 })
-                .toList();
+                .collect(Collectors.toList());
 
         return new WorkStatusListResponse(dailyRecords);
     }
